--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -2,17 +2,14 @@ body {
 	font-family:"Segoe UI";
 	background-color:#343434;
 	padding:10px 100px;
-}
-
-.center {
-	text-align:center
+	text-align:center;
 }
 
 #loginBox {
 	background-color:#129912;
-	width:500px;
+	width:600px;
 	position:relative;
-	top:20%;
+	top:100px;
 	margin:auto;
 	padding:20px;
 	border-radius:30px;}
@@ -22,11 +19,21 @@ body {
 	#loginBox input[type="text"],#loginBox input[type="password"] {
 		font-size:1.5em;
 		color:#000;
+		width:450px;
+		font-family:"Segoe UI";
 	}
 	#loginBox .inputLabel {
 		font-weight:bold;
 		font-size:1.5em;
 		color:#FFF;
+		text-align:right;
+	}
+	#loginBox .inputContent {
+		font-weight:bold;
+		font-size:1.5em;
+		color:#FFF;
+		padding-left:10px;
+		text-align:left;
 	}
 	#loginBox .formRow {
 		padding:10px;
@@ -44,6 +51,7 @@ body {
 		font-size:1.5em;
 		color:#000;
 		width:450px;
+		font-family:"Segoe UI";
 	}
 	#register .inputLabel {
 		font-weight:bold;
@@ -56,11 +64,6 @@ body {
 		color:#FFF;
 		text-align:left;
 		padding-left:10px;
-	}
-	#register input[type = "text"], #messenger select {
-		font-size:1.5em;
-		color:#000;
-		font-family:"Segoe UI";
 	}
 
 .centerButtons {
@@ -121,7 +124,8 @@ body {
 	padding:20px;}
 	#inbox td {
 		border-bottom:solid 1px #000;
-		padding:10px;}
+		padding:10px;
+		text-align:left;}
 		#inbox td a {
 			color:#FFF;
 			text-decoration:none;
@@ -146,6 +150,7 @@ body {
 	#messenger input[type = "text"], #messenger select {
 		font-size:1.5em;
 		color:#000;
+		width:450px;
 		font-family:"Segoe UI";
 	}
 	#messenger textarea {
